// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSwitchFilter should render UI correctly when click on personal representative available 1`] = `
<div>
  <section>
    <div
      class="rich-dropdown"
    >
      <div
        class="flex flex-col switch-filter default"
        tabindex="1"
      >
        <div>
          <div
            class="flex flex-row px-4 py-2 items-center w-auto h-[105px]"
          >
            <div
              class="flex flex-col grow"
            >
              <p
                class="body-2 font-light"
                style="display: block;"
              >
                Viewing as Authorized User
              </p>
              <h3
                class="title-3 font-bold"
              >
                Ellie Williams
              </h3>
              <p
                class="body-1 font-light"
                style="display: block;"
              >
                DOB: 01/01/1943
              </p>
            </div>
            <img
              alt="switch"
              class="size-5 head-icon"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            ,
          </div>
        </div>
      </div>
    </div>
    <span
      style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
    />
    <div
      class="flex flex-col"
    />
  </section>
</div>
`;

exports[`UserSwitchFilter should render the UI correctly for more that one options 1`] = `
<div>
  <section>
    <div
      class="rich-dropdown"
    >
      <div
        class="flex flex-col switch-filter default"
        tabindex="1"
      >
        <div>
          <div
            class="flex flex-row px-4 py-2 items-center w-auto h-[105px]"
          >
            <div
              class="flex flex-col grow"
            >
              <p
                class="body-2 font-light"
                style="display: block;"
              >
                My Profile
              </p>
              <h3
                class="title-3 font-bold"
              >
                Chris Hall
              </h3>
              <p
                class="body-1 font-light"
                style="display: block;"
              >
                DOB: 11/03/2000
              </p>
            </div>
            <img
              alt="switch"
              class="size-5 head-icon"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            ,
          </div>
        </div>
      </div>
    </div>
    <span
      style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
    />
    <div
      class="flex flex-col"
    >
      <a
        aria-label="All Profile Settings"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container font-bold !flex primary-color underline underline-offset-3 title-3 "
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            All Profile Settings
          </p>
          <p
            class="ml-1"
          >
            <img
              alt="link"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
          </p>
        </button>
      </a>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
      />
      <div
        class=""
        style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
      />
      <a
        aria-label="Communication Settings"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline mt-4"
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            Communication Settings
          </p>
        </button>
      </a>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
      />
      <a
        aria-label="Security Settings"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline"
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            Security Settings
          </p>
        </button>
      </a>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
      />
    </div>
  </section>
</div>
`;

exports[`UserSwitchFilter should render the UI correctly for more that one options 2`] = `
<div>
  <section>
    <div
      class="rich-dropdown"
    >
      <div
        class="flex flex-col switch-filter default"
        tabindex="1"
      >
        <div>
          <div
            class="flex flex-row px-4 py-2 items-center w-auto h-[105px]"
          >
            <div
              class="flex flex-col grow"
            >
              <p
                class="body-2 font-light"
                style="display: block;"
              >
                My Profile
              </p>
              <h3
                class="title-3 font-bold"
              >
                Chris Hall
              </h3>
              <p
                class="body-1 font-light"
                style="display: block;"
              >
                DOB: 11/03/2000
              </p>
            </div>
            <img
              alt="switch"
              class="size-5 head-icon"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            ,
          </div>
        </div>
      </div>
      <div
        class="card-elevated switch-filter absolute-dropdown min-w-[100%]  default"
      >
        <div>
          <div>
            <div
              class="flex flex-row h-[72px] p-4 items-center divider-bottom"
            >
              <h3
                class="title-3 grow"
              >
                Switch to...
              </h3>
              <img
                alt="switch"
                class="size-5"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </div>
          </div>
          <ul
            class="max-h-[420px] min-w-[100%] overflow-auto"
          >
            <li
              class=""
            >
              <div
                class="flex flex-row p-4   item"
                tabindex="1"
              >
                <div
                  class=""
                />
                <div
                  class="card-elevated p-4 selected app-base-font-color min-w-[100%]"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="flex flex-col justify-between"
                    >
                      <p
                        class="body-2"
                        style="display: block;"
                      >
                        My Profile
                      </p>
                      <div
                        class="flex flex-row justify-between"
                      >
                        <h3
                          class="title-3 font-bold text-xl py-1"
                        >
                          Chris Hall
                        </h3>
                        <img
                          alt="selected"
                          class="size-5 m-[2px]"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                      <p
                        class="body-1 text-base"
                        style="display: block;"
                      >
                        DOB: 01/01/1978
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class=""
            >
              <div
                class="flex flex-row p-4   item"
                tabindex="1"
              >
                <div
                  class=""
                />
                <div
                  class="card-elevated p-4  app-base-font-color min-w-[100%]"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="flex flex-col justify-between"
                    >
                      <p
                        class="body-2"
                        style="display: block;"
                      >
                        View as Personal Representative
                      </p>
                      <div
                        class="flex flex-row justify-between"
                      >
                        <h3
                          class="title-3 font-bold text-xl py-1 primary-color"
                        >
                          Robert Hall
                        </h3>
                        <img
                          alt="selected"
                          class="size-5 m-[2px]"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                      <p
                        class="body-1 text-base"
                        style="display: block;"
                      >
                        DOB: 01/01/1943
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class=""
            >
              <div
                class="flex flex-row p-4   item"
                tabindex="1"
              >
                <div
                  class=""
                />
                <div
                  class="card-elevated p-4  app-base-font-color min-w-[100%]"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="flex flex-col justify-between"
                    >
                      <p
                        class="body-2"
                        style="display: block;"
                      >
                        View as Authorized User
                      </p>
                      <div
                        class="flex flex-row justify-between"
                      >
                        <h3
                          class="title-3 font-bold text-xl py-1 primary-color"
                        >
                          Ellie Williams
                        </h3>
                        <img
                          alt="selected"
                          class="size-5 m-[2px]"
                          data-nimg="1"
                          decoding="async"
                          height="40"
                          loading="lazy"
                          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                          style="color: transparent;"
                          width="40"
                        />
                      </div>
                      <p
                        class="body-1 text-base"
                        style="display: block;"
                      >
                        DOB: 01/01/1943
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
          <div />
        </div>
      </div>
    </div>
    <span
      style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
    />
    <div
      class="flex flex-col"
    >
      <a
        aria-label="All Profile Settings"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container font-bold !flex primary-color underline underline-offset-3 title-3 "
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            All Profile Settings
          </p>
          <p
            class="ml-1"
          >
            <img
              alt="link"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
          </p>
        </button>
      </a>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
      />
      <div
        class=""
        style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
      />
      <a
        aria-label="Communication Settings"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline mt-4"
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            Communication Settings
          </p>
        </button>
      </a>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
      />
      <a
        aria-label="Security Settings"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container font-bold primary-color body-bold body-1 manage-underline"
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            Security Settings
          </p>
        </button>
      </a>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
      />
    </div>
  </section>
</div>
`;
